--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   min-height: 100vh;
 }
 
+.app__darkMode {
+  background-color: #050810;
+  min-height: 100vh;
+  color: white;
+}
+
 .app__body {
   display: flex;
 }
