--- a/src/SidebarRow.css
+++ b/src/SidebarRow.css
@@ -15,13 +15,13 @@
   border-radius: 10px;
 }
 
-.sidebarRow,
+.sidebarRow > h4,
 .sidebarRow__darkMode > h4 {
   margin-left: 20px;
   font-weight: 600;
 }
 
-.sidebarRow,
+.sidebarRow > .MuiSvgIcon-root,
 .sidebarRow__darkMode > .MuiSvgIcon-root {
   font-size: xx-large;
   color: #2e81f4;
