--- a/src/StoryReel.css
+++ b/src/StoryReel.css
@@ -1,3 +1,10 @@
 .storyReel {
   display: flex;
 }
+
+@media (max-width: 580px) {
+  .storyReel {
+    overflow: scroll;
+    padding: 0 20px;
+  }
+}
