--- a/src/MessageSenderForm.css
+++ b/src/MessageSenderForm.css
@@ -59,3 +59,26 @@
   background-color: #eff2f5;
   border-radius: 20px;
 }
+
+@media (max-width: 675px) {
+  .messageSender__option > h3 {
+    display: none;
+  }
+
+  .messageSender__top > form > input {
+    flex: 0.2;
+    padding: 5px 4px;
+    margin: 0 8px;
+  }
+}
+
+@media (max-width: 580px) {
+  .messageSender__top > form > input:nth-child(2) {
+    display: none;
+  }
+
+  .messageSender__top > form > input {
+    flex: 1;
+    padding: 5px 2rem;
+  }
+}
