--- a/src/Post.css
+++ b/src/Post.css
@@ -63,3 +63,9 @@
   background-color: #eff2f5;
   border-radius: 10px;
 }
+
+@media (max-width: 580px) {
+  .post__option > p {
+    display: none;
+  }
+}
